--- a/examples/next1/package.json
+++ b/examples/next1/package.json
@@ -12,11 +12,11 @@
     "ssg": "yarn build && yarn export && yarn serve"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "../../",
+    "@module-federation/nextjs-mf": "git+https://github.com/wpmedia/nextjs-mf",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "webpack": "~5.30.0"
   },
   "devDependencies": {
